@@ -1183,6 +1183,8 @@ class MethodDocumenter(DocstringSignatureMixin, ClassLevelDocumenter):
     if sys.version_info >= (3, 0):
         def import_object(self):
             ret = ClassLevelDocumenter.import_object(self)
+            if not ret:
+                return ret
             obj_from_parent = self.parent.__dict__.get(self.object_name)
             if isinstance(obj_from_parent, classmethod):
                 self.directivetype = 'classmethod'
@@ -1196,6 +1198,8 @@ class MethodDocumenter(DocstringSignatureMixin, ClassLevelDocumenter):
     else:
         def import_object(self):
             ret = ClassLevelDocumenter.import_object(self)
+            if not ret:
+                return ret
             if isinstance(self.object, classmethod) or \
                    (isinstance(self.object, MethodType) and
                     self.object.im_self is not None):
